--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ a{
   text-decoration:none;
   padding: 10px 20px;
   color: white;
-  rosybrown-color: #3d3c;
+  RosyBrown-color: #3d3c;
   text-transform: uppercase; 
   }
 
