--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ a{
   text-decoration:none;
   padding: 10px 20px;
   color: white;
-  RosyBrown-color: #BC8F8F;
+  background-color: #3757c2;
   text-transform: uppercase; 
   }
 
